# aegistrace-threat-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  collectors.py  config.py  dashboard_generator.py  enricher.py  ioc_extractor.py  main.py  nlp_processor.py  predictor.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_aegistrace.bat  storage.py
.github/workflows/: ci.yml
aegistrace/: __init__.py  __main__.py  cli.py  collectors.py  config.py  dashboard_generator.py  enricher.py  ioc_extractor.py  logging_config.py  main.py  nlp_processor.py  predictor.py  storage.py
tests/: conftest.py  test_cli_and_main.py  test_collectors.py  test_config_and_package.py  test_dashboard_generator.py  test_enricher.py  test_ioc_extractor.py  test_nlp_processor.py  test_predictor.py  test_storage.py
